images for exam

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
 
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     //Jsoup
     compile 'org.jsoup:jsoup:1.9.1'
 
