--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.managersystems.guardasaude">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,24 +12,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activities.LoginActivity"
-            android:theme="@style/LoginTheme"
-            >
+            android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".ui.activities.MainTabActivity">
-        </activity>
-        <activity android:name=".ui.activities.ExamTabActivity">
-
-        </activity>
-        <activity android:name=".ui.activities.FullScreenImageActivity">
-
-        </activity>
+        <activity android:name=".ui.activities.MainTabActivity"></activity>
+        <activity android:name=".ui.activities.ExamTabActivity"></activity>
+        <activity android:name=".ui.activities.FullScreenImageActivity"></activity>
+        <activity android:name=".ui.activities.RegisterActivity"></activity>
     </application>
 
 </manifest>
