--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     //Support for binding views in your java classes
     compile 'com.jakewharton:butterknife:7.0.1'
     // Dagger 2 and Compiler
-    compile 'com.google.dagger:dagger:2.0.1'
-    apt "com.google.dagger:dagger-compiler:2.0.1"
+    /*compile 'com.google.dagger:dagger:2.0.1'
+    apt "com.google.dagger:dagger-compiler:2.0.1"*/
 
     //Dialog
     compile 'me.drakeet.materialdialog:library:1.3.0'
@@ -73,6 +73,13 @@ dependencies {
     // Set this dependency to build and run UI Automator tests
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.0') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
     //Email validation
 
+    compile 'org.hamcrest:hamcrest-core:1.3'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
