--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,35 +35,23 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     //Support for binding views in your java classes
     compile 'com.jakewharton:butterknife:7.0.1'
-    // Dagger 2 and Compiler
-    /*compile 'com.google.dagger:dagger:2.0.1'
-    apt "com.google.dagger:dagger-compiler:2.0.1"*/
-
     //Dialog
     compile 'me.drakeet.materialdialog:library:1.3.0'
-
     //Cardview
     compile 'com.android.support:cardview-v7:23.3.0'
-
     //Recyclerview
     compile 'com.android.support:recyclerview-v7:23.3.0'
-
-    // Needed for @Generated annotation (missing in Android API jar)
-    // No longer needed in dagger >= 2.1-SNAPSHOT (github.com/google/dagger/issues/95)
-    //compile 'javax.annotation:jsr250-api:1.0'
-
     //Retrofit
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
-
     //Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     //Jsoup
     compile 'org.jsoup:jsoup:1.9.1'
 
+    //Testing
     androidTestCompile 'com.android.support:support-annotations:23.3.0'
     androidTestCompile 'com.android.support.test:runner:0.4'
     // Set this dependency to use JUnit 4 rules
@@ -84,7 +72,6 @@ dependencies {
         exclude module: 'recyclerview-v7'
     }
     //Email validation
-
     compile 'org.hamcrest:hamcrest-core:1.3'
     compile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
